Bug 933262 - search box is too wide in palette, r=Unfocused
UltraBlame original commit: 0f56554e8c9b1c09be292c24ebbed3a4ef95ccdf

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -3074,11 +3074,46 @@ flex
 search
 -
 container
-inAnyPanel
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
 {
 width
 :
 menuPanelWidth
+;
+}
+toolbarpaletteitem
+[
+place
+=
+"
+palette
+"
+]
+>
+#
+search
+-
+container
+{
+min
+-
+width
+:
+7em
+;
+width
+:
+7em
 ;
 }
 #
